CMakeList modified to multiply excutes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 #----------------------------------------------------------------------------
 # Setup the project
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-project(eRHICF)
+project(RHICf)
 
 #----------------------------------------------------------------------------
 # Find Geant4 package, activating all available UI and Vis drivers by default
 # You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
 # to build a batch mode only executable
 #
-option(WITH_GEANT4_UIVIS "Build eRHICF with Geant4 UI and Vis drivers" ON)
+option(WITH_GEANT4_UIVIS "Build RHICf with Geant4 UI and Vis drivers" ON)
 if(WITH_GEANT4_UIVIS)
   find_package(Geant4 REQUIRED ui_all vis_all)
 else()
@@ -34,18 +34,22 @@ include_directories(${PROJECT_SOURCE_DIR}/include
 
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
-add_executable(eRHICF eRHICF.cc ${sources} ${headers})
-target_link_libraries(eRHICF ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
+add_executable(TLwoW TLwoW.cc ${sources} ${headers})
+target_link_libraries(TLwoW ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
+add_executable(TSwoW TSwoW.cc ${sources} ${headers})
+target_link_libraries(TSwoW ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
+add_executable(TOPwoW TOPwoW.cc ${sources} ${headers})
+target_link_libraries(TOPwoW ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
 
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory, i.e. the directory in which we
 # build RE06. This is so that we can run the executable directly because it
 # relies on these scripts being in the current working directory.
 #
-set(eRHICF_SCRIPTS
+set(RHICf_SCRIPTS
      vis.mac icons.mac init.mac init_vis.mac run1.mac run2.mac vis1.mac run.png SimuData/py510G_pp.dat hepmc_ascii.in )
 
-foreach(_script ${eRHICF_SCRIPTS})
+ foreach(_script ${RHICf_SCRIPTS})
   configure_file(
     ${PROJECT_SOURCE_DIR}/${_script}
     ${PROJECT_BINARY_DIR}/${_script}
@@ -65,10 +69,10 @@ set(CMAKE_CXX_FLAGS "-g -ggdb -O3")
 # Add program to the project targets
 # (this avoids the need of typing the program name after make)
 #
-#add_custom_target(ex DEPENDS eRHICF)
+#add_custom_target(ex DEPENDS RHICf)
 
 #----------------------------------------------------------------------------
 # Install the executable to 'bin' directory under CMAKE_INSTALL_PREFIX
 #
-install(TARGETS eRHICF DESTINATION bin)
+#install(TARGETS RHICf DESTINATION bin)
 
