Correct center circle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ project(RHICf)
 # You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
 # to build a batch mode only executable
 #
+list(APPEND CMAKE_MODULE_PATH ${CMAKEM_MODULE_PATH} $ENV{ADDITIONALCMAKE})
+find_package(Pythia8 REQUIRED)
 option(WITH_GEANT4_UIVIS "Build RHICf with Geant4 UI and Vis drivers" ON)
 if(WITH_GEANT4_UIVIS)
   find_package(Geant4 REQUIRED ui_all vis_all)
@@ -26,6 +28,11 @@ find_package(ROOT REQUIRED)
 # Add the executable, and link it to the Geant4 libraries
 #
 find_package(HepMC REQUIRED)
+
+set(HEPMC_INCLUDE_DIR $ENV{HEPMC_INCLUDE_DIR})
+set(HEPMC_LIBRARY $ENV{HEPMC_LIBRARY_DIR})
+
+file(GLOB hepmc ${HEPMC_LIBRARY}/libHepMC.so)
 #----------------------------------------------------------------------------
 # Locate sources and headers for this project
 #
@@ -33,14 +40,16 @@ include_directories(${PROJECT_SOURCE_DIR}/include
     ${Geant4_INCLUDE_DIR} ${ROOT_INCLUDE_DIR} ${HEPMC_INCLUDE_DIR} )
 
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
-file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
-add_executable(TLwoW TLwoW.cc ${sources} ${headers})
-target_link_libraries(TLwoW ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
-add_executable(TSwoW TSwoW.cc ${sources} ${headers})
-target_link_libraries(TSwoW ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
-add_executable(TOPwoW TOPwoW.cc ${sources} ${headers})
-target_link_libraries(TOPwoW ${Geant4_LIBRARIES} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES})
+file(GLOB headers ${HEPMC_INCLUDE_DIRS}/*.h ${PROJECT_SOURCE_DIR}/include/*.hh)
+add_executable(TLwoW TLwoW.cc ${PYTHIA8_INCLUDE_DIR}/Pythia8 ${PYTHIA8PLUGIN_INCLUDE_DIR} ${sources} ${headers})
+target_link_libraries(TLwoW ${Geant4_LIBRARIES} ${hepmc} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${PYTHIA8PLUGIN_INCLUDE_DIR} ${PYTHIA8_LIBRARIES} -ldl)
+add_executable(TSwoW TSwoW.cc ${PYTHIA8_INCLUDE_DIR}/Pythia8 ${PYTHIA8PLUGIN_INCLUDE_DIR} ${sources} ${headers})
+target_link_libraries(TSwoW ${Geant4_LIBRARIES} ${hepmc} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${PYTHIA8PLUGIN_INCLUDE_DIR} ${PYTHIA8_LIBRARIES} -ldl)
+add_executable(TOPwoW TOPwoW.cc ${PYTHIA8_INCLUDE_DIR}/Pythia8 ${PYTHIA8PLUGIN_INCLUDE_DIR} ${sources} ${headers})
+target_link_libraries(TOPwoW ${Geant4_LIBRARIES} ${hepmc} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${PYTHIA8PLUGIN_INCLUDE_DIR} ${PYTHIA8_LIBRARIES} -ldl)
 
+add_executable(test main.cc ${PYTHIA8_INCLUDE_DIR}/Pythia8 ${PYTHIA8PLUGIN_INCLUDE_DIR} ${sources} ${headers})
+target_link_libraries(test ${Geant4_LIBRARIES} ${hepmc} ${ROOT_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${PYTHIA8PLUGIN_INCLUDE_DIR} ${PYTHIA8_LIBRARIES} -ldl)
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory, i.e. the directory in which we
 # build RE06. This is so that we can run the executable directly because it
